# yfscc

./: CMakeLists.txt  Makefile  README.md  build.sh  buildcomplier.sh  gene_asm.py  main.cpp  note.txt  sylib.c  test_onpi.py  yfs的毕升杯日报.md
codegen/: BackendPass.cc  BackendPass.h  CodeGen.cc  CodeGen.h  Machine.cc  Machine.h  MachineDumper.cc  MachineDumper.h  MachineInst.cc  MachineInst.h  MachineOperand.cc  MachineOperand.h  RegsAllocator.cc  RegsAllocator.h
common/: Ast.cc  Ast.h  AstVisitor.cc  AstVisitor.h  SymbolTable.cc  SysbolTable.h  Types.h  Utils.cc  Utils.h
ir/: Argument.cc  Argument.h  BasicBlock.cc  BasicBlock.h  Constant.cc  Constant.h  Function.cc  Function.h  GlobalVariable.cc  GlobalVariable.h  Globals.h  Instruction.cc  Instruction.h  IrBuilder.cc  IrBuilder.h  IrDumper.cc  IrDumper.h  IrFactory.cc  IrFactory.h  Module.cc  Module.h  Use.h  User.h  Value.h
lexer/: Lexer.cpp  install.sh  lexer.l
opt/: AlgebraicSimplify.cc  AlgebraicSimplify.h  BranchOptimizer.cc  BranchOptimizer.h  CallGraphAnalysis.cc  CallGraphAnalysis.h  CollectUsedGlobals.cc  CollectUsedGlobals.h  ComputeDominators.cc  ComputeDominators.h  ComputeLoops.cc  ComputeLoops.h  ConstantPropagation.cc  ConstantPropagation.h  CopyPropagation.cc  CopyPropagation.h  CrazyWork.cc  CrazyWork.h  DataflowAnalysis.cc  DataflowAnalysis.h  DeadBlockElim.cc  DeadBlockElim.h  DeadCodeElim.cc  DeadCodeElim.h  DeadFunctionElim.cc  DeadFunctionElim.h  DeadStoreElim.cc  DeadStoreElim.h  DominatorPass.cc  DominatorPass.h  EndRename.cc  EndRename.h  FunctionInline.cc  FunctionInline.h  GlobalAnalysis.cc  GlobalAnalysis.h  GlobalArray2Const.cc  GlobalArray2Const.h  GlobalCodeMotion.cc  GlobalCodeMotion.h  (+34 more)
parser/: Parser.cpp  Parser.hpp  install.sh  parser.y
semantic/: SemanticCheck.cc  SemanticCheck.h
test/: CMakeLists.txt  dumpast_test.cc
test/test_files/: gencfgs.py  genyfscclr.py
test/test_files/asm-handmade/: 17-many-params.out
